# darktide-mission

./: Dockerfile  README.md  backend.py  docker-compose.yaml  docker-compose.yml  index.html  mission_database.py  mission_fetcher.py  pyproject.toml  report_notifier.py  requirements.txt
.github/workflows/: build-image.yml  deploy.yml
database/: missions.db
localization/: authors_note.py  ignored_keywords.py  keywords.py  map_name.py  mission_difficulty.py  mission_modifier.py  mission_type.py  side_mission.py  web_ui.py
structures/: mission.py
templates/: empty_result.html  index.html  mission.html
